--- a/LinkerPlayer/Styles/StylesRepository.xaml
+++ b/LinkerPlayer/Styles/StylesRepository.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Style TargetType="{x:Type ContextMenu}">
+  <!--<Style TargetType="{x:Type ContextMenu}">
     <Setter Property="OverridesDefaultStyle" Value="True" />
     <Setter Property="SnapsToDevicePixels" Value="True" />
     <Setter Property="Foreground" Value="White" />
@@ -94,7 +94,8 @@
         </ControlTemplate>
       </Setter.Value>
     </Setter>
-    <!--<Style.Triggers>
+  -->
+  <!--<Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="{DynamicResource MenuTextAlternativeBrush}"/>
             </Trigger>
@@ -102,6 +103,7 @@
                 <Setter Property="Foreground" Value="{DynamicResource MenuTextBrush}"/>
             </Trigger>
         </Style.Triggers>-->
+  <!--
   </Style>
   <Style TargetType="{x:Type TreeView}">
     <Setter Property="Background" Value="{DynamicResource MenuBackground}" />
@@ -243,9 +245,11 @@
     </Style.Triggers>
   </Style>
 
+  -->
   <!--<Style TargetType="{x:Type DataGridTextColumn}">
         <Setter Property="ElementStyle" Value="{DynamicResource dataGridTextColumnElementStyle}"/>
     </Style>-->
+  <!--
 
   <Style TargetType="{x:Type ScrollBar}">
     <Setter Property="Background" Value="{DynamicResource ControlMediumBrush}" />
@@ -347,8 +351,10 @@
       </Trigger>
     </Style.Triggers>
 
-    <!--<EventSetter Event="MouseDoubleClick" Handler="TVOnItemMouseDoubleClick" />
+  -->
+  <!--<EventSetter Event="MouseDoubleClick" Handler="TVOnItemMouseDoubleClick" />
                                             <EventSetter Event="MouseDown" Handler="TVOnItemMouseDown"/>-->
+  <!--
   </Style>
 
 
@@ -425,9 +431,11 @@
                   FontSize="{DynamicResource FontSizeBiggest}"
                   Text="{TemplateBinding Content}" />
               </ContentPresenter.Content>
-              <!--<ContentPresenter.LayoutTransform>
+  -->
+  <!--<ContentPresenter.LayoutTransform>
                                 <RotateTransform Angle="270" />
                             </ContentPresenter.LayoutTransform>-->
+  <!--
             </ContentPresenter>
           </Border>
           <DataTemplate.Triggers>
@@ -459,7 +467,8 @@
                 ContentSource="Header" />
             </Border>
           </Grid>
-          <!--<ControlTemplate.Triggers>
+  -->
+  <!--<ControlTemplate.Triggers>
                         <Trigger Property="IsSelected" Value="True">
                             <Setter TargetName="Panel" Property="Background" Value="{DynamicResource ControlLightBrush}" />
                             <Setter Property="Foreground" Value="{DynamicResource MenuTextBrush}"/>
@@ -477,13 +486,18 @@
                             <Setter TargetName="Panel" Property="Opacity" Value="1"/>
                         </Trigger>
                     </ControlTemplate.Triggers>-->
+  <!--
         </ControlTemplate>
       </Setter.Value>
     </Setter>
-    <!--<Setter Property="Foreground" Value="{DynamicResource ResourceKey=ControlLightBrush}"/>
+  -->
+  <!--<Setter Property="Foreground" Value="{DynamicResource ResourceKey=ControlLightBrush}"/>
         <Setter Property="Background" Value="{DynamicResource ResourceKey=ControlDarkBrush}"/>-->
+  <!--
     <Setter Property="FontSize" Value="13" />
-    <!--<Setter Property="Visibility" Value="Visible"/>-->
+  -->
+  <!--<Setter Property="Visibility" Value="Visible"/>-->
+  <!--
   </Style>
 
   <Style x:Key="tabItemStyle" TargetType="TabItem">
@@ -511,14 +525,18 @@
               <Setter TargetName="Panel" Property="Background" Value="{DynamicResource SelectedItemBackgroundBrush}" />
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-              <!--<Setter TargetName="Panel" Property="Background" Value="#EEEEEE" />-->
+  -->
+  <!--<Setter TargetName="Panel" Property="Background" Value="#EEEEEE" />-->
+  <!--
               <Setter Property="Opacity" Value="0.8" />
             </Trigger>
           </ControlTemplate.Triggers>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
-    <!--<Setter Property="Visibility" Value="Visible"/>-->
-  </Style>
+  -->
+  <!--<Setter Property="Visibility" Value="Visible"/>-->
+  <!--
+  </Style>-->
 
 </ResourceDictionary>
