--- a/LinkerPlayer/UserControls/FunctionButtons.xaml
+++ b/LinkerPlayer/UserControls/FunctionButtons.xaml
@@ -3,7 +3,9 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:models="clr-namespace:LinkerPlayer.Models"
   d:DesignHeight="450"
   d:DesignWidth="60"
   mc:Ignorable="d">
@@ -19,6 +21,21 @@
   <Grid>
     <Border BorderBrush="#424242" BorderThickness="1" />
     <StackPanel Orientation="Vertical">
+
+      <Button
+        x:Name="PlusButton"
+        Width="50"
+        Height="50"
+        Padding="10"
+        Click="SettingsButton_Click"
+        Content="{iconPacks:Material Plus,
+                                     Width=20,
+                                     Height=20}"
+        Style="{StaticResource TransparentButton}">
+        <Button.Triggers>
+          <EventTrigger RoutedEvent="Button.MouseEnter" />
+        </Button.Triggers>
+      </Button>
 
       <Button
         x:Name="SettingsButton"
