--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl
   x:Class="LinkerPlayer.UserControls.PlaylistTabs"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="clr-namespace:LinkerPlayer.Converters"
-    xmlns:models="clr-namespace:LinkerPlayer.Models"
-    d:DesignHeight="80"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:converters="clr-namespace:LinkerPlayer.Converters"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:models="clr-namespace:LinkerPlayer.Models"
+  d:DesignHeight="80"
   d:DesignWidth="800"
   mc:Ignorable="d">
 
@@ -95,10 +95,9 @@
       <TabControl.ContentTemplate>
         <DataTemplate DataType="{x:Type models:PlaylistTab}">
           <DataGrid
-            ItemsSource="{Binding Tracks}"
+            x:Name="TracksTable"
             Width="Auto"
             Height="Auto"
-            x:Name="TracksTable"
             Margin="1,0,0,0"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
@@ -114,6 +113,7 @@
             EnableRowVirtualization="True"
             GridLinesVisibility="None"
             IsReadOnly="True"
+            ItemsSource="{Binding Tracks}"
             MouseDoubleClick="TrackRow_MouseDoubleClick"
             RowHeaderWidth="0"
             ScrollViewer.CanContentScroll="True"
@@ -122,7 +122,7 @@
             SelectionChanged="TrackRow_SelectionChanged"
             VirtualizingStackPanel.IsVirtualizing="True"
             VirtualizingStackPanel.VirtualizationMode="Standard">
-            
+
             <DataGrid.ColumnHeaderStyle>
               <Style TargetType="DataGridColumnHeader">
                 <Style.Setters>
@@ -195,60 +195,60 @@
                   <DataTemplate>
                     <Grid>
                       <iconPacks:PackIconFontAwesome
-                      x:Name="PlayImage"
-                      Width="20"
-                      Height="10"
-                      Margin="5,0,0,0"
-                      HorizontalAlignment="Right"
-                      VerticalAlignment="Center"
-                      Foreground="{StaticResource TrackListItemForegroundBrush}"
-                      Kind="PlaySolid"
-                      Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Playing}}" />
+                        x:Name="PlayImage"
+                        Width="20"
+                        Height="10"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        Foreground="{StaticResource TrackListItemForegroundBrush}"
+                        Kind="PlaySolid"
+                        Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Playing}}" />
 
                       <iconPacks:PackIconMaterial
-                      x:Name="PauseImage"
-                      Width="20"
-                      Height="10"
-                      Margin="5,0,0,0"
-                      HorizontalAlignment="Right"
-                      VerticalAlignment="Center"
-                      Foreground="{StaticResource TrackListItemForegroundBrush}"
-                      Kind="Pause"
-                      Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Paused}}" />
+                        x:Name="PauseImage"
+                        Width="20"
+                        Height="10"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Center"
+                        Foreground="{StaticResource TrackListItemForegroundBrush}"
+                        Kind="Pause"
+                        Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Paused}}" />
                     </Grid>
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
 
               <DataGridTemplateColumn
-          Width="Auto"
-          Header="Track"
-          SortMemberPath="Track">
+                Width="Auto"
+                Header="Track"
+                SortMemberPath="Track">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
                     <TextBlock
-                Margin="5,0,5,0"
-                HorizontalAlignment="Right"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Track}" />
+                      Margin="5,0,5,0"
+                      HorizontalAlignment="Right"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Track}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
 
               <DataGridTemplateColumn
-          Width="20*"
-          Header="Title"
-          SortMemberPath="Title">
+                Width="20*"
+                Header="Title"
+                SortMemberPath="Title">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
                     <TextBlock
-                Margin="5,0,5,0"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Title, Mode=OneWay}"
-                ToolTip="{Binding Title}">
-                <!--<TextBlock.Style>
+                      Margin="5,0,5,0"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Title, Mode=OneWay}"
+                      ToolTip="{Binding Title}">
+                      <!--<TextBlock.Style>
                   <Style TargetType="TextBlock">
                     <Style.Triggers>
                       <DataTrigger Binding="{Binding Flag}" Value="0">
@@ -274,9 +274,9 @@
                       </DataTrigger>
                     </Style.Triggers>
 
-                -->
-                <!--  OK = 0, Tagged, Hidden, Easy, New, Failures, Unknown  -->
-                <!--
+                      -->
+                      <!--  OK = 0, Tagged, Hidden, Easy, New, Failures, Unknown  -->
+                      <!--
                   </Style>
                 </TextBlock.Style>-->
                     </TextBlock>
@@ -285,99 +285,99 @@
               </DataGridTemplateColumn>
 
               <DataGridTemplateColumn
-          Width="20*"
-          Header="Artist"
-          SortMemberPath="Artists">
+                Width="20*"
+                Header="Artist"
+                SortMemberPath="Artists">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
                     <TextBlock
-                Margin="5,0,5,0"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Artists}"
-                ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
+                      Margin="5,0,5,0"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Artists}"
+                      ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
 
               <DataGridTemplateColumn
-          Width="20*"
-          Header="Album"
-          SortMemberPath="Album">
+                Width="20*"
+                Header="Album"
+                SortMemberPath="Album">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
                     <TextBlock
-                Margin="5,0,5,0"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Album}"
-                ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
+                      Margin="5,0,5,0"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Album}"
+                      ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
 
-              <DataGridTemplateColumn
-          Width="Auto"
-          Header="Year"
-          SortMemberPath="Year">
+              <!--<DataGridTemplateColumn
+                Width="Auto"
+                Header="Year"
+                SortMemberPath="Year">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
                     <TextBlock
-                Margin="5,0,5,0"
-                HorizontalAlignment="Right"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Year}" />
+                      Margin="5,0,5,0"
+                      HorizontalAlignment="Right"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Year}" />
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>-->
+
+              <!--<DataGridTemplateColumn
+                Width="Auto"
+                Header="Genre"
+                SortMemberPath="Genres">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <TextBlock
+                      Margin="5,0,5,0"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Genres}" />
+                  </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+              </DataGridTemplateColumn>-->
+
+              <DataGridTemplateColumn
+                Width="Auto"
+                MinWidth="68"
+                Header="Length"
+                SortMemberPath="Duration">
+                <DataGridTemplateColumn.CellTemplate>
+                  <DataTemplate>
+                    <TextBlock
+                      Margin="5,0,5,0"
+                      d:DataContext="{d:DesignData MediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Duration, Converter={StaticResource DurationConverter}}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
               </DataGridTemplateColumn>
 
-              <DataGridTemplateColumn
-          Width="Auto"
-          Header="Genre"
-          SortMemberPath="Genres">
+              <!--<DataGridTemplateColumn
+                Width="Auto"
+                MinWidth="68"
+                Header="Bitrate"
+                SortMemberPath="Bitrate">
                 <DataGridTemplateColumn.CellTemplate>
                   <DataTemplate>
                     <TextBlock
-                Margin="5,0,5,0"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Genres}" />
+                      Margin="5,0,5,0"
+                      d:DataContext="{d:DesignData IMediaFile}"
+                      FontSize="{DynamicResource FontSizeNormal}"
+                      Text="{Binding Bitrate, StringFormat={}{0} kbps}" />
                   </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-
-              <DataGridTemplateColumn
-          Width="Auto"
-          MinWidth="68"
-          Header="Length"
-          SortMemberPath="Duration">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock
-                Margin="5,0,5,0"
-                d:DataContext="{d:DesignData MediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Duration, Converter={StaticResource DurationConverter}}" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-
-              <DataGridTemplateColumn
-          Width="Auto"
-          MinWidth="68"
-          Header="Bitrate"
-          SortMemberPath="Bitrate">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock
-                Margin="5,0,5,0"
-                d:DataContext="{d:DesignData IMediaFile}"
-                FontSize="{DynamicResource FontSizeNormal}"
-                Text="{Binding Bitrate, StringFormat={}{0} kbps}" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
+              </DataGridTemplateColumn>-->
             </DataGrid.Columns>
           </DataGrid>
           <!--<uc:TracksDataGrid Width="Auto" Height="Auto" VerticalAlignment="Top" Content="{Binding Tracks}"/>-->
