--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -2,13 +2,11 @@
   x:Class="LinkerPlayer.UserControls.PlayerControls"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:converters="clr-namespace:LinkerPlayer.Converters"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:models="clr-namespace:LinkerPlayer.Models"
-  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-  d:DataContext="{d:DesignInstance Type=userControls:PlayerControls}"
+  xmlns:converters="clr-namespace:LinkerPlayer.Converters"
   d:DesignHeight="80"
   d:DesignWidth="1000"
   mc:Ignorable="d">
@@ -36,46 +34,6 @@
             Kind="PlaySolid" />
         </converters:EnumBooleanConverter.FalseValue>
       </converters:EnumBooleanConverter>
-
-      <converters:EnumBooleanConverter x:Key="ShuffleModeToIconConverter">
-        <converters:EnumBooleanConverter.TrueValue>
-          <iconPacks:PackIconMaterial
-            Width="19"
-            Height="19"
-            Margin="0"
-            Kind="Shuffle" />
-        </converters:EnumBooleanConverter.TrueValue>
-        <converters:EnumBooleanConverter.FalseValue>
-          <iconPacks:PackIconMaterial
-            Width="20"
-            Height="20"
-            Margin="3,0,0,0"
-            Kind="ShuffleDisabled" />
-        </converters:EnumBooleanConverter.FalseValue>
-      </converters:EnumBooleanConverter>
-
-      <!--<converters:BooleanConverter
-        x:Key="ShuffleModeToIconConverter"
-          TrueValue ="{iconPacks:Material Shuffle,
-            Width=19,
-            Height=19}"
-          FalseValue="{iconPacks:Material ShuffleDisabled,
-            Width=20,
-            Height=20}" />-->
-
-      <converters:BooleanConverter
-        x:Key="MuteToIconConverter"
-        FalseValue="{iconPacks:MaterialLight Volume,
-                                             Width=15,
-                                             Height=15}"
-        TrueValue="{iconPacks:MaterialLight VolumeMute,
-                                            Width=15,
-                                            Height=15}" />
-
-      <converters:BooleanConverter
-        x:Key="ModeToBrushConverter"
-        FalseValue="{DynamicResource PlayerForegroundBrush}"
-        TrueValue="{DynamicResource ControlPrimaryAccentBrush}" />
 
     </ResourceDictionary>
   </UserControl.Resources>
@@ -106,6 +64,7 @@
           Margin="0,0,4,0"
           HorizontalAlignment="Center"
           VerticalAlignment="Center"
+          Command="{Binding PrevCommand}"
           Content="{iconPacks:Material SkipPrevious,
                                        Width=13,
                                        Height=13}"
@@ -121,6 +80,7 @@
           Margin="4,0,4,0"
           HorizontalAlignment="Center"
           VerticalAlignment="Center"
+          Command="{Binding PlayPauseCommand}"
           Content="{Binding State, Mode=OneWay, Converter={StaticResource PlayerStateToIconConverter}, ConverterParameter={x:Static models:PlayerState.Playing}}"
           Foreground="{DynamicResource PlayerForegroundBrush}"
           Style="{StaticResource LinkerCircleButton}" />
@@ -134,6 +94,7 @@
           Margin="4,0,4,0"
           HorizontalAlignment="Center"
           VerticalAlignment="Center"
+          Command="{Binding StopCommand}"
           Content="{iconPacks:Material Stop,
                                        Width=12,
                                        Height=12}"
@@ -150,6 +111,7 @@
           Margin="4,0,4,0"
           HorizontalAlignment="Center"
           VerticalAlignment="Center"
+          Command="{Binding NextCommand}"
           Content="{iconPacks:Material SkipNext,
                                        Width=13,
                                        Height=13}"
@@ -243,7 +205,7 @@
         Grid.Column="2"
         Width="36"
         Height="36"
-        Click="ShuffleModeButton_Click">
+        Command="{Binding ShuffleCommand}">
         <ToggleButton.Style>
           <Style BasedOn="{StaticResource LinkerCircleToggleButton}" TargetType="ToggleButton">
             <Setter Property="Content" Value="{iconPacks:Material ShuffleDisabled, Width=15, Height=15}" />
@@ -256,14 +218,6 @@
           </Style>
         </ToggleButton.Style>
       </ToggleButton>
-
-      <!--<materialDesign:PackIcon
-          Width="18"
-          Height="18"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"
-          Foreground="{Binding ShuffleMode, Mode=OneWay, Converter={StaticResource ModeToBrushConverter}}"
-          Kind="Shuffle" />-->
 
       <Grid Name="VolumeSlidersGrid" Grid.Column="3">
         <Grid.ColumnDefinitions>
@@ -289,14 +243,14 @@
           ValueChanged="VolumeSlider_ValueChanged" />
 
         <ToggleButton
-          Name="MainVolumeButton"
+          Name="MuteButton"
           Grid.Row="2"
           Grid.Column="1"
           Width="36"
           Height="36"
           VerticalAlignment="Center"
           HorizontalContentAlignment="Center"
-          Click="MainVolumeButton_Click"
+          Command="{Binding MuteCommand}"
           ToolTip="Mute (m)">
           <ToggleButton.Style>
             <Style BasedOn="{StaticResource LinkerCircleToggleButton}" TargetType="{x:Type ToggleButton}">
@@ -312,22 +266,6 @@
           </ToggleButton.Style>
         </ToggleButton>
 
-        <!--<Button
-          Name="MainVolumeButton"
-          Grid.Row="2"
-          Grid.Column="1"
-          Width="32"
-          Height="32"
-          Click="MainVolumeButton_Click"
-          Style="{StaticResource CircleToggleButtonStyle}">
-          <materialDesign:PackIcon
-            Width="18"
-            Height="18"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Foreground="White"
-            Kind="VolumeMute" />
-        </Button>-->
       </Grid>
     </Grid>
   </Grid>
