--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -87,14 +87,14 @@
 
   <Grid>
 
-    <TabControl ItemsSource="{Binding TabList}">
+    <TabControl ItemsSource="{Binding TabList}" SelectionChanged="TabControl_SelectionChanged">
       <TabControl.ItemTemplate>
-        <DataTemplate DataType="{x:Type vm:PlayListsViewModel}">
+        <DataTemplate DataType="{x:Type vm:PlaylistTabsViewModel}">
           <TextBlock Text="{Binding Header}" />
         </DataTemplate>
       </TabControl.ItemTemplate>
       <TabControl.ContentTemplate>
-        <DataTemplate DataType="{x:Type vm:PlayListsViewModel}">
+        <DataTemplate DataType="{x:Type vm:PlaylistTabsViewModel}">
           <DataGrid
             x:Name="TracksTable"
             Width="Auto"
@@ -115,6 +115,7 @@
             GridLinesVisibility="None"
             IsReadOnly="True"
             ItemsSource="{Binding Tracks}"
+            MouseDoubleClick="TrackRow_MouseDoubleClick"
             RowHeaderWidth="0"
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
