--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -91,6 +91,7 @@
       <TabControl.ContextMenu>
         <ContextMenu>
           <MenuItem Header="New Playlist" Click="MenuItem_NewPlaylist" />
+          <MenuItem Header="New Playlist From Folder" Click="MenuItem_NewPlaylistFromFolder" />
           <MenuItem Header="Load Playlist" Click="MenuItem_LoadPlaylist" />
         </ContextMenu>
       </TabControl.ContextMenu>
@@ -100,6 +101,7 @@
             <TextBlock.ContextMenu>
               <ContextMenu>
                 <MenuItem Header="New Playlist" Click="MenuItem_NewPlaylist" />
+                <MenuItem Header="New Playlist From Folder" Click="MenuItem_NewPlaylistFromFolder" />
                 <MenuItem Header="Load Playlist" Click="MenuItem_LoadPlaylist" />
                 <Separator/>
                 <MenuItem Header="Add Folder" Click="MenuItem_AddFolder" />
