--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -53,7 +53,6 @@
       <ColumnDefinition Width="60" />
     </Grid.ColumnDefinitions>
 
-    <!--  Title Bar  -->
     <userControls:TitlebarButtons
       x:Name="TitlebarButtons"
       Grid.Row="0"
@@ -63,25 +62,12 @@
     <userControls:PlaylistTabs
       x:Name="PlaylistTabs"
       Grid.Row="1"
-      Grid.Column="1"
-      Grid.ColumnSpan="1" />
-
-    <!--  Main Window Body  -->
-    <!--<Border
-      Grid.Row="1"
-      Grid.Column="0"
-      Background="Black"
-      Opacity="0.4" />-->
+      Grid.Column="1" />
 
     <userControls:TrackInfo
       x:Name="TrackInfo"
       Grid.Row="1"
       Grid.Column="0" />
-
-    <!--<userControls:TracksDataGrid
-      x:Name="TracksTable"
-      Grid.Row="1"
-      Grid.Column="1" />-->
 
     <materialDesign:Snackbar
       Name="InfoSnackbar"
@@ -90,12 +76,6 @@
       Grid.ColumnSpan="3"
       IsActive="False"
       MessageQueue="{materialDesign:MessageQueue}" />
-
-    <!--<Border
-      Grid.Row="1"
-      Grid.Column="2"
-      Background="Black"
-      Opacity="0.4" />-->
 
     <userControls:FunctionButtons
       x:Name="FunctionButtons"
@@ -108,6 +88,5 @@
       Grid.Column="0"
       Grid.ColumnSpan="3" />
 
-    <!--<userControls:TrayIcon Grid.Row="0" Grid.Column="0" />-->
   </Grid>
 </Window>
