--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -1,13 +1,12 @@
 ﻿<UserControl
   x:Class="LinkerPlayer.UserControls.PlaylistTabs"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:converters="clr-namespace:LinkerPlayer.Converters"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:models="clr-namespace:LinkerPlayer.Models"
-  xmlns:vm="clr-namespace:LinkerPlayer.ViewModels"
   xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
   d:DesignHeight="80"
   d:DesignWidth="800"
@@ -27,18 +26,20 @@
       <Style x:Key="EditableTabHeaderControl" TargetType="{x:Type userControls:EditableTabHeaderControl}">
         <Setter Property="Template">
           <Setter.Value>
-            <ControlTemplate TargetType="{x:Type userControls:EditableTabHeaderControl}">
-              
-              <Grid>
-                <TextBox x:Name="PART_TabHeader" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content, Mode=TwoWay}" Visibility="Collapsed"/>
-                <TextBlock x:Name="PART_TextBlock" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content, Mode=TwoWay}"/>
-              </Grid>
 
+            <ControlTemplate TargetType="{x:Type userControls:EditableTabHeaderControl}">
+              <Grid>
+                <TextBox
+                  x:Name="PART_TabHeader"
+                  Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content, Mode=TwoWay}"
+                  Visibility="Collapsed" />
+                <TextBlock x:Name="PART_TextBlock" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content, Mode=TwoWay}" />
+              </Grid>
               <ControlTemplate.Triggers>
                 <Trigger Property="IsInEditMode" Value="True">
                   <Trigger.Setters>
-                    <Setter TargetName="PART_TabHeader" Property="Visibility" Value="Visible"/>
-                    <Setter TargetName="PART_TextBlock" Property="Visibility" Value="Collapsed"/>
+                    <Setter TargetName="PART_TabHeader" Property="Visibility" Value="Visible" />
+                    <Setter TargetName="PART_TextBlock" Property="Visibility" Value="Collapsed" />
                   </Trigger.Setters>
                 </Trigger>
               </ControlTemplate.Triggers>
@@ -53,9 +54,9 @@
           <Setter.Value>
             <DataTemplate>
               <userControls:EditableTabHeaderControl
-                   Style="{StaticResource EditableTabHeaderControl}"
-                   MouseLeftButtonDown="TabHeader_MouseLeftButtonDown"
-                   MouseRightButtonDown="TabHeader_MouseRightButtonDown">
+                MouseLeftButtonDown="TabHeader_MouseLeftButtonDown"
+                MouseRightButtonDown="TabHeader_MouseRightButtonDown"
+                Style="{StaticResource EditableTabHeaderControl}">
                 <userControls:EditableTabHeaderControl.ContextMenu>
                   <ContextMenu>
                     <MenuItem Click="MenuItem_NewPlaylist" Header="New Playlist" />
@@ -71,7 +72,7 @@
                   </ContextMenu>
                 </userControls:EditableTabHeaderControl.ContextMenu>
                 <userControls:EditableTabHeaderControl.Content>
-                  <Binding Path="Name" Mode="TwoWay"/>
+                  <Binding Mode="TwoWay" Path="Name" />
                 </userControls:EditableTabHeaderControl.Content>
               </userControls:EditableTabHeaderControl>
             </DataTemplate>
@@ -79,37 +80,35 @@
         </Setter>
       </Style>
 
-      <DataTemplate x:Key="ContentTemplate" DataType="{x:Type models:PlaylistTab}" >
+      <DataTemplate x:Key="ContentTemplate" DataType="{x:Type models:PlaylistTab}">
         <DataGrid
-            Name="TracksTable"
-            Width="Auto"
-            Height="Auto"
-            Margin="1,0,0,0"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"
-            AlternationCount="2"
-            AutoGenerateColumns="False"
-            Background="Transparent"
-            BorderBrush="#424242"
-            BorderThickness="1"
-            CanUserAddRows="False"
-            CanUserDeleteRows="False"
-            CanUserReorderColumns="True"
-            EnableColumnVirtualization="True"
-            EnableRowVirtualization="True"
-            GridLinesVisibility="None"
-            IsReadOnly="True"
-            ItemsSource="{Binding Tracks}"
-            Loaded="DataGrid_Loaded"
-            MouseDoubleClick="TrackRow_MouseDoubleClick"
-            RowHeaderWidth="0"
-            ScrollViewer.CanContentScroll="True"
-            ScrollViewer.HorizontalScrollBarVisibility="Auto"
-            ScrollViewer.VerticalScrollBarVisibility="Auto"
-            SelectedItem="{Binding SelectedTrack}"
-            SelectionChanged="TracksTable_OnSelectionChanged"
-            VirtualizingStackPanel.IsVirtualizing="True"
-            VirtualizingStackPanel.VirtualizationMode="Standard">
+          Name="TracksTable"
+          Width="Auto"
+          Height="Auto"
+          Margin="1,0,0,0"
+          HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch"
+          AlternationCount="2"
+          AutoGenerateColumns="False"
+          Background="Transparent"
+          BorderBrush="#424242"
+          BorderThickness="1"
+          CanUserAddRows="False"
+          CanUserDeleteRows="False"
+          CanUserReorderColumns="True"
+          EnableColumnVirtualization="True"
+          EnableRowVirtualization="True"
+          GridLinesVisibility="None"
+          IsReadOnly="True"
+          ItemsSource="{Binding Tracks}"
+          Loaded="DataGrid_Loaded"
+          RowHeaderWidth="0"
+          ScrollViewer.CanContentScroll="True"
+          ScrollViewer.HorizontalScrollBarVisibility="Auto"
+          ScrollViewer.VerticalScrollBarVisibility="Auto"
+          SelectionChanged="TracksTable_OnSelectionChanged"
+          VirtualizingStackPanel.IsVirtualizing="True"
+          VirtualizingStackPanel.VirtualizationMode="Standard">
 
           <DataGrid.ColumnHeaderStyle>
             <Style TargetType="DataGridColumnHeader">
@@ -152,7 +151,7 @@
               <Setter Property="BorderThickness" Value="0" />
               <Setter Property="VerticalAlignment" Value="Center" />
               <Setter Property="Foreground" Value="{DynamicResource TrackListItemForegroundBrush}" />
-
+              <EventSetter Event="MouseDoubleClick" Handler="PlaylistRow_MouseDoubleClick" />
               <Style.Triggers>
 
                 <Trigger Property="ItemsControl.AlternationIndex" Value="1">
@@ -175,68 +174,68 @@
 
           <DataGrid.Columns>
             <DataGridTemplateColumn
-                Width="Auto"
-                MinWidth="{DynamicResource TrackTableImageSize}"
-                Header="">
+              Width="Auto"
+              MinWidth="{DynamicResource TrackTableImageSize}"
+              Header="">
 
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
                   <Grid>
                     <iconPacks:PackIconFontAwesome
-                        x:Name="PlayImage"
-                        Width="20"
-                        Height="10"
-                        Margin="5,0,0,0"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Foreground="{StaticResource TrackListItemForegroundBrush}"
-                        Kind="PlaySolid"
-                        Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Playing}}" />
+                      x:Name="PlayImage"
+                      Width="20"
+                      Height="10"
+                      Margin="5,0,0,0"
+                      HorizontalAlignment="Right"
+                      VerticalAlignment="Center"
+                      Foreground="{StaticResource TrackListItemForegroundBrush}"
+                      Kind="PlaySolid"
+                      Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Playing}}" />
 
                     <iconPacks:PackIconMaterial
-                        x:Name="PauseImage"
-                        Width="20"
-                        Height="10"
-                        Margin="5,0,0,0"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Foreground="{StaticResource TrackListItemForegroundBrush}"
-                        Kind="Pause"
-                        Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Paused}}" />
+                      x:Name="PauseImage"
+                      Width="20"
+                      Height="10"
+                      Margin="5,0,0,0"
+                      HorizontalAlignment="Right"
+                      VerticalAlignment="Center"
+                      Foreground="{StaticResource TrackListItemForegroundBrush}"
+                      Kind="Pause"
+                      Visibility="{Binding State, Mode=OneWay, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter={x:Static models:PlayerState.Paused}}" />
                   </Grid>
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
 
             <DataGridTemplateColumn
-                Width="Auto"
-                Header="Track"
-                SortMemberPath="Track">
+              Width="Auto"
+              Header="Track"
+              SortMemberPath="Track">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
                   <TextBlock
-                      Margin="5,0,5,0"
-                      HorizontalAlignment="Right"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Track}" />
+                    Margin="5,0,5,0"
+                    HorizontalAlignment="Right"
+                    d:DataContext="{d:DesignData IMediaFile}"
+                    FontSize="{DynamicResource FontSizeNormal}"
+                    Text="{Binding Track}" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
 
             <DataGridTemplateColumn
-                Width="20*"
-                Header="Title"
-                SortMemberPath="Title">
+              Width="20*"
+              Header="Title"
+              SortMemberPath="Title">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
                   <TextBlock
-                      Margin="5,0,5,0"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Title, Mode=OneWay}"
-                      ToolTip="{Binding Title}">
-                      <!--<TextBlock.Style>
+                    Margin="5,0,5,0"
+                    d:DataContext="{d:DesignData IMediaFile}"
+                    FontSize="{DynamicResource FontSizeNormal}"
+                    Text="{Binding Title, Mode=OneWay}"
+                    ToolTip="{Binding Title}">
+                    <!--<TextBlock.Style>
                   <Style TargetType="TextBlock">
                     <Style.Triggers>
                       <DataTrigger Binding="{Binding Flag}" Value="0">
@@ -262,9 +261,9 @@
                       </DataTrigger>
                     </Style.Triggers>
 
-                      -->
-                      <!--  OK = 0, Tagged, Hidden, Easy, New, Failures, Unknown  -->
-                      <!--
+                    -->
+                    <!--  OK = 0, Tagged, Hidden, Easy, New, Failures, Unknown  -->
+                    <!--
                   </Style>
                 </TextBlock.Style>-->
                   </TextBlock>
@@ -273,99 +272,53 @@
             </DataGridTemplateColumn>
 
             <DataGridTemplateColumn
-                Width="20*"
-                Header="Artist"
-                SortMemberPath="Artists">
+              Width="20*"
+              Header="Artist"
+              SortMemberPath="Artists">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
                   <TextBlock
-                      Margin="5,0,5,0"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Artists}"
-                      ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
+                    Margin="5,0,5,0"
+                    d:DataContext="{d:DesignData IMediaFile}"
+                    FontSize="{DynamicResource FontSizeNormal}"
+                    Text="{Binding Artists}"
+                    ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
 
             <DataGridTemplateColumn
-                Width="20*"
-                Header="Album"
-                SortMemberPath="Album">
+              Width="20*"
+              Header="Album"
+              SortMemberPath="Album">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
                   <TextBlock
-                      Margin="5,0,5,0"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Album}"
-                      ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
+                    Margin="5,0,5,0"
+                    d:DataContext="{d:DesignData IMediaFile}"
+                    FontSize="{DynamicResource FontSizeNormal}"
+                    Text="{Binding Album}"
+                    ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
-
-            <!--<DataGridTemplateColumn
-                Width="Auto"
-                Header="Year"
-                SortMemberPath="Year">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock
-                      Margin="5,0,5,0"
-                      HorizontalAlignment="Right"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Year}" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>-->
-
-            <!--<DataGridTemplateColumn
-                Width="Auto"
-                Header="Genre"
-                SortMemberPath="Genres">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock
-                      Margin="5,0,5,0"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Genres}" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>-->
 
             <DataGridTemplateColumn
-                Width="Auto"
-                MinWidth="68"
-                Header="Length"
-                SortMemberPath="Duration">
+              Width="Auto"
+              MinWidth="68"
+              Header="Length"
+              SortMemberPath="Duration">
               <DataGridTemplateColumn.CellTemplate>
                 <DataTemplate>
                   <TextBlock
-                      Margin="5,0,5,0"
-                      d:DataContext="{d:DesignData MediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Duration, Converter={StaticResource DurationConverter}}" />
+                    Margin="5,0,5,0"
+                    d:DataContext="{d:DesignData MediaFile}"
+                    FontSize="{DynamicResource FontSizeNormal}"
+                    Text="{Binding Duration, Converter={StaticResource DurationConverter}}" />
                 </DataTemplate>
               </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
 
-            <!--<DataGridTemplateColumn
-                Width="Auto"
-                MinWidth="68"
-                Header="Bitrate"
-                SortMemberPath="Bitrate">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate>
-                    <TextBlock
-                      Margin="5,0,5,0"
-                      d:DataContext="{d:DesignData IMediaFile}"
-                      FontSize="{DynamicResource FontSizeNormal}"
-                      Text="{Binding Bitrate, StringFormat={}{0} kbps}" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>-->
           </DataGrid.Columns>
           <DataGrid.ContextMenu>
             <ContextMenu>
@@ -378,11 +331,13 @@
   </UserControl.Resources>
 
   <Grid>
-    <TabControl Grid.Row="0"
-                ItemsSource="{Binding TabList}"
-                ItemContainerStyle="{StaticResource ItemContainerStyle}" 
-                ContentTemplate="{StaticResource ContentTemplate}"
-                SelectionChanged="TabControl_SelectionChanged" >
+    <TabControl
+      Grid.Row="0"
+      Margin="0,0,5,0"
+      ContentTemplate="{StaticResource ContentTemplate}"
+      ItemContainerStyle="{StaticResource ItemContainerStyle}"
+      ItemsSource="{Binding TabList}"
+      SelectionChanged="TabControl_SelectionChanged">
       <TabControl.ContextMenu>
         <ContextMenu>
           <MenuItem Click="MenuItem_NewPlaylist" Header="New Playlist" />
@@ -391,9 +346,6 @@
         </ContextMenu>
       </TabControl.ContextMenu>
     </TabControl>
-
-
-
   </Grid>
 
 </UserControl>
